Making the book the correct size on smaller screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -22,17 +22,25 @@ div.book-container {
     border-radius: 4px;
     padding:15px 25px 15px 25px;
     margin-top:70px;
+    width:80vw;
+    max-width: 1200px;
+    height:70vh;
+    max-height: 700px;
+    display:grid
 }
 #base-pages {
+    grid-area:1/1;
     position: relative;
     background-color: white;
-    height:700px;
-    width:1200px;
+    height:100%;
+    width:100%;
     border: 2px solid #D9D9D9;
+    box-sizing: border-box;
 }
 div#book-frame {
     height:100%;
     width:100%;
+    box-sizing: border-box;
 }
 #book-frame .turn-page {
     background-color: white;
@@ -64,10 +72,11 @@ div.half-page:nth-child(2) {
     border-left: 3px solid #D9D9D9;
 }
 #tab-container {
-    position: absolute;
+    grid-area:1/1;
+    position: relative;
     display: flex;
     justify-content: space-around;
-    width: 1204px;
+    width: 100%;
     height: 80px;
     margin: -70px 0px 0px 0px;
 }
